--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "doc": "jsdoc -c jsdoc.json",
     "nodemon": "nodemon --expose-gc ./bin/www",
     "dev-win": "set DEBUG=express:* & nodemon  --expose-gc./bin/www",
     "dev": "DEBUG=express:* nodemon --expose-gc ./bin/www",
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "date-and-time": "^0.14.2",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "ejs": "~2.5.7",
     "escape-html": "^1.0.3",
     "exceljs": "^4.3.0",
@@ -37,6 +39,7 @@
     "hashids": "^1.2.2",
     "http-errors": "~1.6.2",
     "jest": "^27.0.4",
+    "joi": "^17.9.2",
     "json5": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.12",
@@ -45,10 +48,14 @@
     "node-cron": "^3.0.2",
     "node-fetch": "2.6.6",
     "node-forge": "^0.10.0",
+    "nodemon": "^3.0.1",
     "on-finished": "^2.3.0",
     "qrcode": "^1.4.4",
     "winston": "^3.2.1",
     "xlsx": "^0.16.9",
     "xlsx-populate": "^1.21.0"
+  },
+  "devDependencies": {
+    "jsdoc": "^4.0.2"
   }
 }
